<resources>
    <string name="app_name">Phase1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="action_addMessage">Add Message</string>
    <string name="title_activity_add_message">AddMessage</string>
    <string name="title_activity_message">Message</string>
    <string name="likes_counter">Likes: %2$d</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
